fix: fixed layout issues

--- a/src/shared/core/arrow-panel/arrow-panel-component.module.scss
+++ b/src/shared/core/arrow-panel/arrow-panel-component.module.scss
@@ -5,7 +5,7 @@
   background: $global-background;
   border-radius: $global-border-radius;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.08);
-  padding: 16px 42px 16px 16px;
+  padding: 16px 36px 16px 16px;
   height: 52px;
   margin: 8px;
   overflow: hidden;
@@ -35,8 +35,8 @@
   }
   &__title {
     color: $global-color;
-    font-weight: bold;
-    font-family: $global-font-family-secondary;
+    font-weight: 600;
+    font-family: $global-font-family;
     line-height: 1.2;
     display: -webkit-box;
     -webkit-line-clamp: 2;
@@ -55,7 +55,7 @@
   &__list-items {
     color: $gray-light;
     font-weight: 600;
-    font-family: $global-font-family-secondary;
+    font-family: $global-font-family;
     line-height: 1.2;
     display: -webkit-box;
     -webkit-line-clamp: 2;
